fix: allow portfolio origins for writing vault cors